        way with <span class="underline">

      - fixed 101494: Empty "source" elements break the XSLT renderer

      - fixed 101396: paragraphs in lists, tables rendered differently
        in widgets vs xslt renderers

      - fixed 101567: hires image links work from kupu but not widgets
        renderers

      - fixed 148863: toc rendering not XHTML compliant

  Silva 2.0

    Features added:

      - Use layers in our tests.  This makes sure that we can use
        unittests that set up and tear down the component architecture
        without interfering with the components that were set up for
        the integrational tests using the actual Products' ZCML.

      - Use `DefaultUnicodeEncodingConflictResolver` instead of the
        default `Z2UnicodeEncodingConflictResolver` for page
        templates.  This means that our page templates will not
        attempt to implicitly convert to something when a string is
        not unicode and it's not a string containing ASCII characters
        only.

      - Removed obsolete five:traversable statements from zcml.

      - PageTemplateFile was used with non-existing page
        templates. This used to work in versions prior to Zope 2.10,
        but failed now. Changed __init__.py so that these
        PageTemplateFile instances are not needed anymore.

      - Use new MessageFactory from Zope 3.3 to make it compatible
        with Zope 2.10

      - Changed set_mapping to mapping arguments for message IDs

      - Changed css styling of the preview publisher buttons, making
        easier for users to integrate the publisher into their own
        layout.

      - If no title is given, the index is considered a 'pure' anchor,
        and will not be found by Indexers.

      - XHTML compliance improvements

    Bugs Fixed:

      - A security fix in Zope 2.10.3 broke install.py.

  Silva 1.6

    Features added:

      - 2007-03-15: Containers show their modification datetime in the